--- a/myScriptDroid/Resources/layout/activity_main.axml
+++ b/myScriptDroid/Resources/layout/activity_main.axml
@@ -27,7 +27,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.40"
         android:orientation="horizontal">
-        <Myscript.Styleable.MathWidgetStyleable
+        <com.myscript.atk.maw.styleable.MathWidgetStyleable
             android:id="@+id/myscript_maw"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
